Minor code cleanups (#11)